force-app/main/default/objects/redwing__Learning__c/redwing__Learning__c.object-meta.xml
<CustomObject>
    <label>Learning</label>
    <nameField>
        <label>Learning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Objects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>