force-app/main/default/objects/redwing__Learning__c/fields/redwing__Current_Published_Version__c.field-meta.xml
<CustomField>
    <fullName>redwing__Current_Published_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Published Version</label>
    <referenceTo>redwing__Learning_Version__c</referenceTo>
    <relationshipLabel>Learning Objects</relationshipLabel>
    <relationshipName>Learnings</relationshipName>
    <type>Lookup</type>
</CustomField>