force-app/main/default/objects/redwing__Learning__c/fields/redwing__Current_Published_Version_Formula__c.field-meta.xml
<CustomField>
    <fullName>redwing__Current_Published_Version_Formula__c</fullName>
    <formula>IF(!ISBLANK(redwing__Current_Published_Version__c),HYPERLINK(&quot;/&quot;&amp;redwing__Current_Published_Version__c,&quot;Version &quot;&amp;TEXT(redwing__Current_Published_Version__r.redwing__Version__c),&quot;_self&quot;) ,&quot;&quot;)</formula>
    <label>Current Published Version</label>
    <type>Text</type>
</CustomField>