force-app/main/default/objects/redwing__Learning__c/fields/redwing__Default_Language_Learning_Object__c.field-meta.xml
<CustomField>
    <fullName>redwing__Default_Language_Learning_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Language Learning Object</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>redwing__Learning__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>redwing__Learning__c.redwing__Default_Language_Learning_Object__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>redwing__Learning__c.redwing__Is_Published_Formula__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>Learning Objects</relationshipLabel>
    <relationshipName>Learning_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>