force-app/main/default/objects/redwing__Learning__c/fields/redwing__Description__c.field-meta.xml
<CustomField>
    <fullName>redwing__Description__c</fullName>
    <inlineHelpText>This description is displayed for users on the Learning List, Learning Header, and Assignment</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>