force-app/main/default/objects/redwing__Learning__c/fields/redwing__Duration__c.field-meta.xml
<CustomField>
    <fullName>redwing__Duration__c</fullName>
    <label>Duration (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>