force-app/main/default/objects/redwing__Learning__c/fields/redwing__Enforce_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enforce_Due_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If enabled, the Due Date on Learning Assignments will be enforced. User will not be able to launch a standalone learning object if the due date is in the past.</inlineHelpText>
    <label>Enforce Due Date</label>
    <type>Checkbox</type>
</CustomField>