force-app/main/default/objects/redwing__Learning__c/fields/redwing__Is_Published_Formula__c.field-meta.xml
<CustomField>
    <fullName>redwing__Is_Published_Formula__c</fullName>
    <formula>IF(redwing__Published__c,TRUE,FALSE)</formula>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>