force-app/main/default/objects/redwing__Learning__c/fields/redwing__Published__c.field-meta.xml
<CustomField>
    <fullName>redwing__Published__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>