force-app/main/default/objects/redwing__Learning__c/fields/redwing__Registration_Survey__c.field-meta.xml
<CustomField>
    <fullName>redwing__Registration_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the survey to be used for user self-registration</inlineHelpText>
    <label>Registration Survey</label>
    <referenceTo>redwing__Survey__c</referenceTo>
    <relationshipLabel>Learning Objects</relationshipLabel>
    <relationshipName>Learning_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>