force-app/main/default/objects/redwing__Learning__c/fields/redwing__Sync_progress__c.field-meta.xml
<CustomField>
    <fullName>redwing__Sync_progress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this checkbox if you plan to add this learning to multiple Learning Plans and you would like to keep progress in sync between plans</inlineHelpText>
    <label>Sync progress across assignments</label>
    <type>Checkbox</type>
</CustomField>