force-app/main/default/objects/redwing__Learning__c/recordTypes/redwing__CheckIn.recordType-meta.xml
<RecordType>
    <fullName>redwing__CheckIn</fullName>
    <active>false</active>
    <description>Check-In Learning Activity</description>
    <label>Check-In</label>
</RecordType>