force-app/main/default/objects/redwing__Learning__c/recordTypes/redwing__ILT.recordType-meta.xml
<RecordType>
    <fullName>redwing__ILT</fullName>
    <active>true</active>
    <description>Overview of the ILT Class learning object and its objective</description>
    <label>ILT Class</label>
</RecordType>