force-app/main/default/objects/redwing__Learning__c/recordTypes/redwing__ILT_Event.recordType-meta.xml
<RecordType>
    <fullName>redwing__ILT_Event</fullName>
    <active>true</active>
    <description>Overview of the ILT Event learning object and its objective</description>
    <label>ILT Event</label>
</RecordType>