force-app/main/default/objects/redwing__Learning__c/recordTypes/redwing__Quiz.recordType-meta.xml
<RecordType>
    <fullName>redwing__Quiz</fullName>
    <active>true</active>
    <description>Quiz Learning Activity</description>
    <label>Quiz</label>
</RecordType>