force-app/main/default/objects/redwing__Learning__c/recordTypes/redwing__Resource.recordType-meta.xml
<RecordType>
    <fullName>redwing__Resource</fullName>
    <active>true</active>
    <description>Resource (URL) Learning Activity</description>
    <label>Resource</label>
</RecordType>