force-app/main/default/objects/redwing__Learning__c/recordTypes/redwing__RichText.recordType-meta.xml
<RecordType>
    <fullName>redwing__RichText</fullName>
    <active>true</active>
    <description>Rich Text Activity</description>
    <label>Rich Text</label>
</RecordType>