force-app/main/default/objects/redwing__Learning__c/recordTypes/redwing__Task.recordType-meta.xml
<RecordType>
    <fullName>redwing__Task</fullName>
    <active>true</active>
    <description>Task Learning Activity</description>
    <label>Task</label>
</RecordType>