force-app/main/default/objects/redwing__Learning__c/listViews/redwing__All.listView-meta.xml
<ListView>
    <fullName>redwing__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>redwing__Description__c</columns>
    <columns>redwing__Duration__c</columns>
    <columns>redwing__Published__c</columns>
    <columns>redwing__Sync_progress__c</columns>
    <columns>redwing__Current_Published_Version_Formula__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>